--- a/style.css
+++ b/style.css
@@ -28,11 +28,12 @@ body {
 
 .input-wrapper {
   grid-area: input;
+  display: flex;
 }
 
 .todo-input {
   all: unset;
-
+  height: 1.5rem;
   width: 14rem;
 }
 
@@ -41,10 +42,7 @@ body {
   text-align: center;
   margin-left: 1rem;
   cursor: pointer;
-}
-
-.add-btn {
-  width: 1rem;
+  height: 1.5rem;
 }
 
 .filter {
@@ -58,7 +56,7 @@ body {
   position: relative;
   grid-area: todos;
   padding: 2rem;
-  width: 25rem;
+  min-width: 55%;
 }
 
 .badge {
